--- a/judge/templates/account/login.html
+++ b/judge/templates/account/login.html
@@ -1,20 +1,22 @@
 {% extends "account/custom_base.html" %}
 {% load settings_tags %}
 {% load i18n %}
-{% block head_title %}Sign Up{% endblock %}
+{% block head_title %}Sign In{% endblock %}
 
 {% block main %}
 <div class="card">
     <div class="card-body">
+        <h5 class="card-title">Sign In</h5>
+        <p>If you have not created an account yet, then please <a href="{{ signup_url }}">sign up</a> first.</p>
         <form method="post">
-            <h5 class="card-title">Sign Up</h5>
             {% csrf_token %}
             {{ form.as_p }}
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
-            By signing up, you are agreeing to our <a href="{% settings_value "tos_url" %}">terms</a>.
+            <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
             <button type="submit" class="btn btn-primary mr-2">Submit</button>
+
         </form>
     </div>
 </div>
