--- a/judge/templates/base_pnoj.html
+++ b/judge/templates/base_pnoj.html
@@ -13,6 +13,8 @@
         <title>{{ page_title }}</title>
         {% elif flatpage.title %}
         <title>PNOJ: {{ flatpage.title }}</title>
+        {% else %}
+        {% block head_title %}{% endblock %}
         {% endif %}
 
         <!-- Bootstrap core CSS -->
