--- a/judge/templates/judge/user_index.html
+++ b/judge/templates/judge/user_index.html
@@ -1,9 +1,14 @@
 {% extends 'base_pnoj.html' %}
+{% load link_tags %}
 
 {% block main %}
 <div class="card">
     <div class="card-body">
+        {% if purpose == 'organization_members' %}
+        <h5 class="card-title">Members of {{ organization.slug|organization }}</h5>
+        {% else %}
         <h5 class="card-title">Users</h5>
+        {% endif %}
         <table class="table table-sm">
             <thead>
                 <tr>
