--- a/judge/templates/judge/submission.html
+++ b/judge/templates/judge/submission.html
@@ -80,7 +80,7 @@
 {% endblock %}
 
 {% block navbar %}
-{% if user == submission.author %}
+{% if source_viewable %}
 <li class="nav-item my-auto mx-2">
     <a href="{% url 'submission_source' submission.pk %}" class="btn btn-info">View Source</a>
 </li>
