reorganize organization related templates

--- a/judge/templates/judge/organization/detail.html
+++ b/judge/templates/judge/organization/detail.html
@@ -1,4 +1,4 @@
-{% extends 'base_comments.html' %}
+{% extends 'judge/base_comment.html' %}
 {% load link_tags %}
 {% load humanize %}
 {% load markdown_tags %}
