--- a/judge/templates/judge/submission/source.html
+++ b/judge/templates/judge/submission/source.html
@@ -21,7 +21,7 @@
 
 {% block navbar %}
 <li class="nav-item my-auto">
-    <a href="{% url 'submission' submission.pk %}" class="btn btn-info">View Status</a>
+    <a href="{% url 'submission_detail' submission.pk %}" class="btn btn-info">View Status</a>
 </li>
 {% endblock %}
 
