--- a/judge/templates/judge/user/list.html
+++ b/judge/templates/judge/user/list.html
@@ -22,7 +22,7 @@
                 {% for i in users %}
                 <tr>
                     <th scope="row">{{ forloop.counter }}</th>
-                    <td><a href={% url 'profile' i.username %}>{{ i.username }}</a></td>
+                    <td><a href={% url 'user_detail' i.username %}>{{ i.username }}</a></td>
                     <td>{{ i.points|floatformat }}</td>
                     <td>{{ i.num_problems_solved }}</td>
                 </tr>
