--- a/judge/templates/judge/base.html
+++ b/judge/templates/judge/base.html
@@ -47,11 +47,10 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile-dropdown">
                     <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Logged in as {{ user.username }}</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'user_profile' %}">Profile</a>
+                    <a class="dropdown-item" href="{% url 'user_detail_redirect' %}">Profile</a>
                     {% if user.is_staff %}
                     <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
                     {% endif %}
-                    <!-- <a class="dropdown-item" href="{}% url 'logout' %{}">Log out</a> -->
                     <a class="dropdown-item" href="{% url 'account_logout' %}">Log out</a>
                 </div>
             </li>
