--- a/judge/templates/judge/info/index.html
+++ b/judge/templates/judge/info/index.html
@@ -6,7 +6,7 @@
 {% block main %}
 <div class="card mb-3">
     <div class="card-body">
-        Welcome to PNOJ! Please register or try out a problem <a href="{% url 'problems_index' %}">here</a>.
+        Welcome to PNOJ! Please register or try out a problem <a href="{% url 'problem_list' %}">here</a>.
     </div>
 </div>
 
