--- a/judge/templates/judge/user/detail.html
+++ b/judge/templates/judge/user/detail.html
@@ -26,7 +26,7 @@
 {% block navbar %}
     {% if profile == user %}
     <li class="nav-item ml-3 my-auto">
-        <a href="{% url 'profile_edit' %}" class="btn btn-primary">Edit profile</a>
+        <a href="{% url 'user_edit' %}" class="btn btn-primary">Edit profile</a>
     </li>
     {% endif %}
     <li class="nav-item my-auto">
