--- a/judge/templates/judge/user/form.html
+++ b/judge/templates/judge/user/form.html
@@ -9,7 +9,7 @@
             {% csrf_token %}
             {{ form|crispy }}
             <button type="submit" class="btn btn-primary mr-2">Submit</button>
-            <a href="{% url 'user_profile' %}" class="btn btn-primary" role="button" aria-pressed="true">Cancel</a>
+            <a href="{% url 'user_detail_redirect' %}" class="btn btn-primary" role="button" aria-pressed="true">Cancel</a>
         </form>
     </div>
 </div>
