fix 404 on no trailing slash issue

--- a/templates/account/superbase.html
+++ b/templates/account/superbase.html
@@ -18,6 +18,8 @@
 
     {% block content %}
     {% endblock %}
+
+    <a href="{% url 'index' %}">Return Home</a>
 </div>
 
 {% block extra_body %}
