--- a/judge/templates/judge/info/blog_post.html
+++ b/judge/templates/judge/info/blog_post.html
@@ -8,7 +8,7 @@
 <div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">{{ post.title }}</h5>
-        <h6 class="card-subtitle mb-3 text-muted">{{ post.author.all|join:", " }} posted {{ post.created|naturaltime }}</h6>
+        <h6 class="card-subtitle mb-3 text-muted">{{ post.author.all|users }} posted {{ post.created|naturaltime }}</h6>
         <p class="card-text">{{ post.text|markdown }}</p>
     </div>
 </div>
