--- a/judge/templates/judge/problem/detail.html
+++ b/judge/templates/judge/problem/detail.html
@@ -1,6 +1,7 @@
 {% extends 'judge/base_comment.html' %}
 {% load gravatar_tags %}
 {% load markdown_tags %}
+{% load link_tags %}
 
 {% block main %}
 <div class="card">
@@ -16,7 +17,7 @@
         <li class="list-group-item">Points: {{ problem.points }}</li>
         <li class="list-group-item">Time limit: {{ problem.time_limit }}s</li>
         <li class="list-group-item">Memory limit: {{ problem.memory_limit }}M</li>
-        <li class="list-group-item">Author: {{ problem.author.all|join:", " }}</li>
+        <li class="list-group-item">Author: {{ problem.author.all|users }}</li>
         {% if problem.category.all %}
         <li class="list-group-item">Category: {{ problem.category.all|join:", " }}</li>
         {% endif %}
