--- a/judge/templates/judge/submission/list.html
+++ b/judge/templates/judge/submission/list.html
@@ -14,65 +14,10 @@
         {% else %}
         <h5 class="card-title">Submissions</h5>
         {% endif %}
-        <table class="table table-sm">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Score</th>
-                    <th scope="col">Points</th>
-                    <th scope="col">Language</th>
-                    <th scope="col">Problem</th>
-                    <th scope="col">User</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for i in submissions %}
-                <tr class="table-{{ i.status_display|status_color }}">
-                    <td>{{ i.pk|submission }}</td>
-                    <td>{{ i.status_display }}</td>
-                    {% if i.scoreable %}
-                    <td>{{ i.scored }}/{{ i.scoreable }}</td>
-                    {% else %}
-                    <td>-</td>
-                    {% endif %}
-                    <td>{{ i.points|floatformat }}/{{ i.problem.points }}</td>
-                    <td>{{ i.get_language_display }}</td>
-                    <td>{{ i.problem.slug|problem }}</td>
-                    <td>{{ i.author.username|user }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
 
-        <nav>
-            <ul class="pagination justify-content-center">
-                {% if page_obj.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Prev</a>
-                </li>
-                {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-disabled="true">Prev</a>
-                </li>
-                {% endif %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-disabled="true">
-                        {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                    </a> 
-                </li>
-                {% if page_obj.has_next %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
-                </li>
-                {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-disabled="true">Next</a>
-                </li>
+        {% include 'judge/submission/snippet/table.html' %}
 
-                {% endif %}
-            </ul>
-        </nav>
+        {% include 'paginator/snippet.html' %}
     </div>
 </div>
 {% endblock %}
