--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -14,7 +14,7 @@
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
-    <p>By clicking this button, you agree to our <a href="{% settings_value "TOS_URL" %}">terms</a>.</p>
+    <p>By clicking this button, you agree to our <a href="{% settings_value "tos_url" %}">terms</a>.</p>
     <button type="submit" class="btn btn-primary mb-3 g-recaptcha">{% trans "Sign Up" %}</button>
 </form>
 
