--- a/judge/templates/judge/user/detail.html
+++ b/judge/templates/judge/user/detail.html
@@ -34,3 +34,6 @@
     </li>
 {% endblock %}
 
+{% block othermeta %}
+<meta property="og:profile:username" content="{{ profile.username }}" />
+{% endblock %}
