--- a/judge/templates/judge/info/blog_post.html
+++ b/judge/templates/judge/info/blog_post.html
@@ -2,6 +2,7 @@
 {% load link_tags %}
 {% load humanize %}
 {% load markdown_tags %}
+{% load settings_tags %}
 {% load tz %}
 
 {% block main %}
@@ -12,4 +13,12 @@
         <p class="card-text">{{ post.text|markdown }}</p>
     </div>
 </div>
+{% endblock %}
+
+{% block othermeta %}
+<meta property="og:article:published_time" content="{{ post.created|date:"c" }}" />
+<meta property="og:article:modified_time" content="{{ post.last_modified|date:"c" }}" />
+{% for author in post.author.all %}
+<meta property="og:article:author" content="{% settings_value "scheme" %}://{{ site.domain }}{{ author.get_absolute_url }}" />
+{% endfor %}
 {% endblock %}
