--- a/judge/templates/judge/base.html
+++ b/judge/templates/judge/base.html
@@ -4,21 +4,23 @@
 {% load gravatar_tags %}
 
 {% block body %}
-<div class="container-fluid">
-    <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-            <div class="sidebar-sticky" id="navbar">
-                <ul class="nav flex-column">
-                    {% settings_value "navbar" as navbar %}
-                    {% for name, link in navbar.items %}
-                    <li class="nav-item"><a class="nav-link" href="{{ link }}">{{ name }}</a></li>
-                    {% endfor %}
-                </ul>
+<div class="d-flex" v-bind:class="{ toggled: is_toggled }" id="wrapper">
+    <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="list-group">
+            <div class="position-fixed list-group-flush">
+                {% settings_value "navbar" as navbar %}
+                {% for name, link in navbar.items %}
+                <a href="{{ link }}" class="list-group-item list-group-item-action bg-light text-dark">{{ name }}</a>
+                {% endfor %}
             </div>
-        </nav>
+        </div>
+    </div>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <div class="mb-3">
+    <div id="page-content-wrapper">
+
+
+        <div class="container-fluid">
+            <div class="my-4">
                 {% block main %}
                 {% endblock %}
             </div>
@@ -26,49 +28,118 @@
                 {% block comment %}
                 {% endblock %}
             </div>
+        </div>
 
-        </main>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom fixed-bottom">
+            <button class="btn btn-secondary" id="menu-toggle" v-on:click="is_toggled = !is_toggled">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                </svg>
+            </button>
+
+            <a class="navbar-brand mx-auto" href="/">
+                <img src="{% static 'logos/inverted-long.png' %}" height="30" alt="Inverted long PNOJ logo">
+            </a>
+
+            <ul class="navbar-nav my-auto">
+                {% if user.is_authenticated %}
+                <li class="nav-item dropup ml-4">
+                    <a class="nav-link dropdown-toggle" href="#" id="profile-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="{{ user.email|gravatar_url:20 }}" alt="User profile picture" class="img-thumbnail">
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile-dropdown">
+                        <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Logged in as {{ user.username }}</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'user_detail_redirect' %}">Profile</a>
+                        {% if user.is_staff %}
+                        <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+                        {% endif %}
+                        <a class="dropdown-item" href="{% url 'account_logout' %}">Log out</a>
+                    </div>
+                </li>
+                {% else %}
+                <li class="nav-item ml-4 my-auto">
+                    <div class="text-light">
+                        <a class="font-weight-bold text-info" href="{% url 'account_login' %}">Log in</a> or <a class="font-weight-bold text-info" href="{% url 'account_signup' %}">Sign up</a>
+                    </div>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
     </div>
 </div>
-<nav class="navbar navbar-expand-lg navbar-dark fixed-bottom bg-dark flex-md-nowrap p-0">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">
-        <div class="text-center">
-            <img src="{% static 'logos/inverted-long.png' %}" height="30" alt="Inverted long PNOJ logo">
-        </div>
-    </a>
 
-    <div class="collapse flex-row-reverse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav flex-row-reverse px-3 my-auto">
-            {% if user.is_authenticated %}
-            <li class="nav-item dropup ml-4">
-                <a class="nav-link dropdown-toggle" href="#" id="profile-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="{{ user.email|gravatar_url:30 }}" alt="User profile picture" class="img-thumbnail">
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile-dropdown">
-                    <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Logged in as {{ user.username }}</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'user_detail_redirect' %}">Profile</a>
-                    {% if user.is_staff %}
-                    <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
-                    {% endif %}
-                    <a class="dropdown-item" href="{% url 'account_logout' %}">Log out</a>
-                </div>
-            </li>
-            {% else %}
-            <li class="nav-item ml-4 my-auto">
-                <div class="text-light">
-                    <a class="font-weight-bold text-info" href="{% url 'account_login' %}">Log in</a> or <a class="font-weight-bold text-info" href="{% url 'account_signup' %}">Sign up</a>
-                </div>
-            </li>
-            {% endif %}
-            {% block navbar %}
-            {% endblock %}
-        </ul>
-    </div>
-</nav>
+
+
+
+
+<!-- <div class="container-fluid"> -->
+<!--     <div class="row"> -->
+<!--         <nav class="col-md-2 d-none d-md-block bg-light sidebar" id="sidebarMenu"> -->
+<!--             <div class="sidebar-sticky" id="navbar"> -->
+<!--                 <ul class="nav flex-column"> -->
+<!--                     {% settings_value "navbar" as navbar %} -->
+<!--                     {% for name, link in navbar.items %} -->
+<!--                     <li class="nav-item"><a class="nav-link" href="{{ link }}">{{ name }}</a></li> -->
+<!--                     {% endfor %} -->
+<!--                 </ul> -->
+<!--             </div> -->
+<!--         </nav> -->
+
+<!--         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4"> -->
+<!--             <div class="my-4"> -->
+<!--                 { block main %} -->
+<!--                 { endblock %} -->
+<!--             </div> -->
+<!--             <div class="mb-6"> -->
+<!--                 { block comment %} -->
+<!--                 { endblock %} -->
+<!--             </div> -->
+
+<!--         </main> -->
+<!--     </div> -->
+<!-- </div> -->
+<!-- <nav class="navbar navbar-expand-lg navbar-dark fixed-bottom bg-dark flex-md-nowrap p-0"> -->
+<!--     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/"> -->
+<!--         <div class="text-center"> -->
+<!--             <img src="{% static 'logos/inverted-long.png' %}" height="30" alt="Inverted long PNOJ logo"> -->
+<!--         </div> -->
+<!--     </a> -->
+
+<!--     <div class="collapse flex-row-reverse navbar-collapse" id="navbarCollapse"> -->
+<!--         <ul class="navbar-nav flex-row-reverse px-3 my-auto"> -->
+<!--             {% if user.is_authenticated %} -->
+<!--             <li class="nav-item dropup ml-4"> -->
+<!--                 <a class="nav-link dropdown-toggle" href="#" id="profile-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> -->
+<!--                     <img src="{{ user.email|gravatar_url:30 }}" alt="User profile picture" class="img-thumbnail"> -->
+<!--                 </a> -->
+<!--                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile-dropdown"> -->
+<!--                     <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Logged in as {{ user.username }}</a> -->
+<!--                     <div class="dropdown-divider"></div> -->
+<!--                     <a class="dropdown-item" href="{% url 'user_detail_redirect' %}">Profile</a> -->
+<!--                     {% if user.is_staff %} -->
+<!--                     <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a> -->
+<!--                     {% endif %} -->
+<!--                     <a class="dropdown-item" href="{% url 'account_logout' %}">Log out</a> -->
+<!--                 </div> -->
+<!--             </li> -->
+<!--             {% else %} -->
+<!--             <li class="nav-item ml-4 my-auto"> -->
+<!--                 <div class="text-light"> -->
+<!--                     <a class="font-weight-bold text-info" href="{% url 'account_login' %}">Log in</a> or <a class="font-weight-bold text-info" href="{% url 'account_signup' %}">Sign up</a> -->
+<!--                 </div> -->
+<!--             </li> -->
+<!--             {% endif %} -->
+<!--         </ul> -->
+<!--     </div> -->
+<!-- </nav> -->
 
 {% block script %}
 {% endblock %}
+
+<script src="{% static 'scripts/base.js' %}"></script>
+
 {% endblock %}
 
 {% block title %}{{ page_title }}{% endblock %}
