--- a/judge/templates/judge/problem/submit.html
+++ b/judge/templates/judge/problem/submit.html
@@ -29,13 +29,10 @@
             </p>
             <!-- <button type="submit" class="btn btn-primary mr-2 my-auto">{% templatetag openvariable %} submit_button_text {% templatetag closevariable %}</button> -->
             <button type="submit" class="btn btn-primary mr-2 my-auto">Submit</button>
+            <a href="{% url 'problem_detail' problem.slug %}" class="btn btn-secondary my-auto" role="button" aria-pressed="true">Cancel</a>
         </form>
     </div>
 </div>
-{% endblock %}
-
-{% block navbar %}
-<a href="{% url 'problem_detail' problem.slug %}" class="btn btn-primary ml-3 my-auto" role="button" aria-pressed="true">Cancel</a>
 {% endblock %}
 
 {% block script %}
