--- a/judge/templates/judge/user/form.html
+++ b/judge/templates/judge/user/form.html
@@ -8,6 +8,7 @@
             <h5 class="card-title">Edit profile</h5>
             {% csrf_token %}
             {{ form|crispy }}
+            <a href="https://gravatar.com">Edit profile photo</a><br><br>
             <button type="submit" class="btn btn-primary mr-2">Submit</button>
             <a href="{% url 'user_detail_redirect' %}" class="btn btn-primary" role="button" aria-pressed="true">Cancel</a>
         </form>
