remove vue code from base.js

--- a/judge/templates/judge/problem/submit.html
+++ b/judge/templates/judge/problem/submit.html
@@ -36,6 +36,6 @@
 {% endblock %}
 
 {% block script %}
-<script src="{% static 'scripts/submit.js' %}"></script>
+<script src="{% static 'scripts/submit.js' %}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/jszip@3.5.0/dist/jszip.min.js" integrity="sha256-cNXRgwrU74TQiTDsep3TqNE1ZOBPrOmYVYWi+fM8czw=" crossorigin="anonymous"></script>
 {% endblock %}
